# qite

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  flake.nix
.github/: FUNDING.yml  WORKFLOWS.yml
.github/workflows/: build.yml
docs/: getting-started.md
src/: Interpreter.cpp  Interpreter.hpp  Qite.cpp  Qite.hpp  ast.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  qite.cpp  qite.hpp  token.hpp
